Change default date to today + cache the selected date in the service. Fix side menu link bug; work around translation bug with fall back to default language;

--- a/www/assets/i18n/en.json
+++ b/www/assets/i18n/en.json
@@ -3,7 +3,10 @@
 		"title": "Agenda",
 		"error": {
 			"loadAgenda": "An error occurred while loading the agenda. Please try again later."
-		}
+		},
+		"price_colon": "Price:",
+		"remove": "Remove",
+		"edit": "Modify"
 	},
 	"lesson": {
 		"edit": "Modify a lesson",
