small changes to render better on iOS, incl. translating the back button text.

--- a/www/assets/i18n/en.json
+++ b/www/assets/i18n/en.json
@@ -33,5 +33,8 @@
 		"monthly": "Monthly",
 		"bimonthly": "Bimonthly"
 	},
+	"global": {
+		"backButton": "Back"
+	},
 	"error": "An unknown issue occurred. You may close the application and try again."
 }
