--- a/www/assets/i18n/fr.json
+++ b/www/assets/i18n/fr.json
@@ -33,5 +33,8 @@
 		"monthly": "Tous les mois",
 		"bimonthly": "Tous les deux mois"
 	},
+	"global": {
+		"backButton": "Retour"
+	},
 	"error": "Un problème inconnu est survenu. Vous pouvez fermer l'application et essayer à nouveau."
 }
