Authentication impl in progress. Fails for github, it seems some config is missing in Firebase

--- a/www/assets/i18n/en.json
+++ b/www/assets/i18n/en.json
@@ -49,6 +49,10 @@
 			"remove": "An error occurred while removing the lesson. Please try again later."
 		}
 	},
+	"auth": {
+		"title": "Sign in",
+		"accessDenied": "Access denied. Please reauthenticate and retry."
+	},
 	"alert": {
 		"cancel": "Cancel",
 		"done": "Done",
