Agenda and other data are displayed for authenticated user only

--- a/www/assets/i18n/en.json
+++ b/www/assets/i18n/en.json
@@ -51,7 +51,8 @@
 	},
 	"auth": {
 		"title": "Sign in",
-		"accessDenied": "Access denied. Please reauthenticate and retry."
+		"accessDenied": "Access denied. Please reauthenticate and retry.",
+		"logout": "Log out"
 	},
 	"alert": {
 		"cancel": "Cancel",
