Adding the form to change the password

--- a/www/assets/i18n/en.json
+++ b/www/assets/i18n/en.json
@@ -50,10 +50,20 @@
 		}
 	},
 	"auth": {
-		"title": "Sign in",
+		"signin": "Sign in",
+		"signup": "Sign up",
 		"accessDenied": "Access denied. Please reauthenticate and retry.",
 		"logout": "Log out",
-		"github": "Sign in with github"
+		"withProvider": "Or sign in with:",
+		"github": "Github",
+		"email": "Email",
+		"password": "Password",
+		"checkEmailSent": "An email was sent with a temporary password. Please enter it as well as your new password.",
+		"changePassword": "Password change",
+		"oldPassword": "Old password",
+		"newPassword": "New password",
+		"confirmPassword": "Confirm password",
+		"differentPasswords": "Passwords don't match"
 	},
 	"alert": {
 		"cancel": "Cancel",
@@ -77,5 +87,37 @@
 	},
 	"error": "An unknown issue occurred. You may close the application and try again.",
 	"_money": "{{currency}} {{value}}",
-	"_moneySymbol": "{{currency}}{{value}}"
+	"_moneySymbol": "{{currency}}{{value}}",
+	"AUTHENTICATION_PROVIDER_DISABLED": "The requested authentication provider is disabled for this Firebase.",
+	"DENIED_BY_USER": "The user did not authorize the application.",
+	"DISCONNECTED": "The operation had to be aborted due to a network disconnect.",
+	"EMAIL_TAKEN": "The new user account cannot be created because the specified email address is already in use.",
+	"EXPIRED_TOKEN": "The supplied auth token has expired.",
+	"INVALID_AUTH_ARGUMENTS": "The specified credentials are malformed or incomplete.",
+	"INVALID_CONFIGURATION": "The requested authentication provider is misconfigured, and the request cannot complete.",
+	"INVALID_CREDENTIALS": "The specified authentication credentials are invalid. This may occur when credentials are malformed or expired.",
+	"INVALID_EMAIL": "The specified email is not a valid email.",
+	"INVALID_PASSWORD": "The specified user account password is incorrect.",
+	"INVALID_PROVIDER": "The requested authentication provider does not exist.",
+	"INVALID_TOKEN": "The specified authentication token is invalid. This can occur when the token is malformed, expired, or the Firebase app secret that was used to generate it has been revoked.",
+	"LIMITS_EXCEEDED": "Limited exceeded.",
+	"MAX_RETRIES": "The transaction had too many retries.",
+	"NETWORK_ERROR": "The operation could not be performed due to a network error.",
+	"OPERATION_FAILED": "The server indicated that this operation failed.",
+	"OVERRIDDEN_BY_SET": "The transaction was overridden by a subsequent set.",
+	"PERMISSION_DENIED": "This client does not have permission to perform this operation.",
+	"PREEMPTED": "The active or pending auth credentials were superseded by another call to auth.",
+	"PROVIDER_ERROR": "A third-party provider error occurred.",
+	"UNAVAILABLE": "The service is unavailable.",
+	"UNKNOWN_ERROR": "An unknown error occurred.",
+	"USER_CODE_EXCEPTION": "An exception occurred in user code.",
+	"USER_DOES_NOT_EXIST": "The specified user account does not exist.",
+	"WRITE_CANCELED": "The write was canceled locally.",
+	"AUTHENTICATION_DISABLED": "The requested authentication provider is disabled for this Firebase application.",
+	"INVALID_ARGUMENTS": "The specified credentials are malformed or incomplete.",
+	"INVALID_ORIGIN": "A security error occurred while processing the authentication request. The web origin for the request is not in your list of approved request origins.",
+	"INVALID_USER": "The specified user account does not exist.",
+	"TRANSPORT_UNAVAILABLE": "The requested login method is not available in the user's browser environment. Popups are not available in Chrome for iOS, iOS Preview Panes, or local, file:// URLs. Redirects are not available in PhoneGap / Cordova, or local, file:// URLs.",
+	"USER_CANCELLED": "The current authentication request was cancelled by the user.",
+	"USER_DENIED": "The user did not authorize the application. This error can occur when the user has cancelled an OAuth authentication request."
 }
