Change default value for frequency: weekly + start adding the cancel lesson button

--- a/www/assets/i18n/en.json
+++ b/www/assets/i18n/en.json
@@ -6,7 +6,8 @@
 		},
 		"price_colon": "Price:",
 		"remove": "Remove",
-		"edit": "Modify",
+		"cancelLesson": "Cancel this lesson",
+		"edit": "Modify the series",
 		"from": "From",
 		"until": "until",
 		"included": "included",
