--- a/www/assets/i18n/fr.json
+++ b/www/assets/i18n/fr.json
@@ -6,7 +6,8 @@
 		},
 		"price_colon": "Prix :",
 		"remove": "Supprimer",
-		"edit": "Modifier",
+		"cancelLesson": "Annuler cette leçon",
+		"edit": "Modifier la série",
 		"from": "Depuis le",
 		"until": "jusqu'au",
 		"included": "inclus",
