Fix: can see entries with no students selected + No repetition is automatically replaced by weekly.

--- a/www/assets/i18n/en.json
+++ b/www/assets/i18n/en.json
@@ -11,6 +11,7 @@
 		"from": "From",
 		"until": "until",
 		"included": "included",
+		"noStudent": "No student selected",
 		"deleteConfirm": {
 			"title": "Delete the lesson",
 			"message": "Please confirm the removal of this lesson. Beware: all occurrences of this series will be removed."
