Fixed email verification logic, add an icon when the email is not verified yet.

--- a/www/assets/i18n/en.json
+++ b/www/assets/i18n/en.json
@@ -80,14 +80,17 @@
 		"forgot": "Forgot",
 		"forgotFull": "You forgot your password?",
 		"resetPassword": "Reset password",
-		"checkEmailSent": "An email was sent with a temporary password. Please enter it as well as your new password.",
+		"_checkEmailSent": "An e-mail was sent with a temporary password. Please enter it as well as your new password.",
+		"checkEmailSent": "An e-mail was sent with a link to verify your e-mail address.",
 		"changePassword": "Password change",
 		"validateChange": "Change password",
 		"oldPassword": "Old password",
 		"newPassword": "New password",
 		"confirmPassword": "Confirm password",
 		"differentPasswords": "Passwords don't match",
-		"resendPassword": "Re-send the password"
+		"resendPassword": "Re-send the password",
+		"resendVerificationEmail": "Re-send the verification e-mail",
+		"unverifiedEmail": "Your e-mail has not been verified yet."
 	},
 	"alert": {
 		"cancel": "Cancel",
@@ -115,12 +118,12 @@
 	"AUTHENTICATION_PROVIDER_DISABLED": "The requested authentication provider is disabled for this Firebase.",
 	"DENIED_BY_USER": "The user did not authorize the application.",
 	"DISCONNECTED": "The operation had to be aborted due to a network disconnect.",
-	"EMAIL_TAKEN": "The new user account cannot be created because the specified email address is already in use.",
+	"EMAIL_TAKEN": "The new user account cannot be created because the specified e-mail address is already in use.",
 	"EXPIRED_TOKEN": "The supplied auth token has expired.",
 	"INVALID_AUTH_ARGUMENTS": "The specified credentials are malformed or incomplete.",
 	"INVALID_CONFIGURATION": "The requested authentication provider is misconfigured, and the request cannot complete.",
 	"INVALID_CREDENTIALS": "The specified authentication credentials are invalid. This may occur when credentials are malformed or expired.",
-	"INVALID_EMAIL": "The specified email is not a valid email.",
+	"INVALID_EMAIL": "The specified e-mail is not a valid e-mail.",
 	"INVALID_PASSWORD": "The specified user account password is incorrect.",
 	"INVALID_PROVIDER": "The requested authentication provider does not exist.",
 	"INVALID_TOKEN": "The specified authentication token is invalid. This can occur when the token is malformed, expired, or the Firebase app secret that was used to generate it has been revoked.",
