--- a/www/assets/i18n/fr.json
+++ b/www/assets/i18n/fr.json
@@ -76,18 +76,21 @@
 		"withProvider": "Ou connectez-vous avec:",
 		"github": "Github",
 		"email": "Email",
-		"password": "Password",
+		"password": "Mot de passe",
 		"forgot": "Oubli",
 		"forgotFull": "Mot de passe oublié ?",
 		"resetPassword": "Réinitialiser le mot de passe",
-		"checkEmailSent": "Un email a été envoyé avec un mot de passe temporaire. Veuillez le saisir, ainsi que votre nouveau mot de passe.",
+		"_checkEmailSent": "Un e-mail a été envoyé avec un mot de passe temporaire. Veuillez le saisir, ainsi que votre nouveau mot de passe.",
+		"checkEmailSent": "Un e-mail a été envoyé pour vérifier votre adresse e-mail.",
 		"changePassword": "Changement de MDP",
 		"validateChange": "Changer le mot de passe",
 		"oldPassword": "Ancien mot de passe",
 		"newPassword": "Nouveau mot de passe",
-		"confirmPassword": "Confirmez le mot de passe",
+		"confirmPassword": "Confirmez",
 		"differentPasswords": "Les mots de passe ne correspondent pas",
-		"resendPassword": "Renvoyer le mot de passe"
+		"resendPassword": "Renvoyer le mot de passe",
+		"resendVerifyEmail": "Renvoyer l'e-mail de vérification",
+		"unverifiedEmail": "Votre e-mail n'a pas enore été vérifié."
 	},
 	"alert": {
 		"cancel": "Annuler",
